--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -72,7 +72,7 @@
     </nav>
 
   <!-- Modal -->
-  <div id="myModal" class="modal">
+  <div id="myModal" class="modal-fade" style="z-index:9999;" role="dialog";>
 
     <!-- Modal content -->
     <div class="modal-content">
