--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -32,7 +32,7 @@
 
 
 <nav class="navbar navbar-expand-md fixed-top navbar-dark" div id="navbar">
-    <a class="navbar-brand abs" href="#">AdamMeetsEve</a>
+    <a class="navbar-brand abs" href="index.html">AdamMeetsEve</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
         <span class="navbar-toggler-icon"></span>
     </button>
