--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -106,7 +106,7 @@
                 alt ="Not Found"
                 style="width:100%; border-radius: 90%;">
         <p class="lead"><br> Your #1 dating site for Christian mingling. Click below to enter paradise.</p>
-        <button type="button" class="btn btn-dark btn-lg" div id="button" onclick="location.href='/register.html'">Register</button>
+        <button type="button" class="btn btn-dark btn-lg" div id="button" onclick="location.href='/register'">Register</button>
 
       </div>
 
