--- a/src/main/resources/static/user.css
+++ b/src/main/resources/static/user.css
@@ -1,7 +1,7 @@
 body {
     padding-top: 50px;
-    background-color: #ffa07a;
-    color: #ffffff;
+    background-color: #ffffff;
+    color: #000000;
 }
 .index-body {
     margin-top: 125px;
