--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -28,14 +28,9 @@
     <![endif]-->
 </head>
 
-<body style="background-color: #ffa07a">
-
 
 <nav class="navbar navbar-expand-md fixed-top navbar-dark" div id="navbar">
     <a class="navbar-brand abs" href="index.html">AdamMeetsEve</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
-        <span class="navbar-toggler-icon"></span>
-    </button>
     <div class="navbar-collapse collapse" id="collapsingNavbar">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
@@ -146,7 +141,10 @@
 
     // When the user clicks on <span> (x), close the modal
     span.onclick = function() {
-        modal.style.display = "none";
+        $("#myModal").removeClass("in");
+        $(".modal-backdrop").remove();
+        $("#myModal").hide();
+        $("#myModal").removeData();
     }
 
     // When the user clicks anywhere outside of the modal, close it
