--- a/src/main/resources/static/AdamMeetsEve.css
+++ b/src/main/resources/static/AdamMeetsEve.css
@@ -7,6 +7,7 @@ body {
 #navbar {
     background-color: #ffa07a;
     height: 65px;
+    color: #ffffff !important;
 }
 
 #loginBtn  {
@@ -16,6 +17,10 @@ body {
     border-radius: 5px;
 }
 
+#ameTbl {
+    border-collapse:separate;
+    border-spacing:10px 25px;
+}
 #dropdownBtn  {
     background-color: #ffa07a;
     color: #ffffff;
