--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -56,7 +56,7 @@
   </div>
 
     <nav class="navbar navbar-expand-md fixed-top navbar-dark" div id="navbar">
-      <a class="navbar-brand abs" href="#">AdamMeetsEve</a>
+      <a class="navbar-brand abs" th:href="index">AdamMeetsEve</a>
       <div class="navbar-collapse collapse" id="collapsingNavbar">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
@@ -85,12 +85,14 @@
           </tr>
           <tr>
             <th><input type="submit"/></th>
+            javascript:validate();
           </tr>
         </table>
       </form>
     </div>
 
   </div>
+
 
     <div class="container">
 
