--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,154 +1,119 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="assets/img/ameicon.png">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <link rel="icon" href="assets/img/ameicon.png">
 
-    <title>Adam Meets Eve | Welcome!</title>
+  <title>Adam Meets Eve</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Bootstrap core CSS -->
+  <link href="dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+  <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+  <link href="assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="index.css" rel="stylesheet">
-    <link href="AdamMeetsEve.css" rel="stylesheet">
+  <!-- Custom styles for this template -->
+  <link href="user.css" rel="stylesheet">
+  <link href="AdamMeetsEve.css" rel="stylesheet">
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!--[if lt IE 9]>
+  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <script type="text/javascript" src="Scripts/bootstrap.min.js"></script>
+  <script src="assets/js/bootstrap.js"></script>
+  <![endif]-->
+</head>
 
-  <body style="background-color: #ffa07a">
 
-  <!--
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="index.html">Adam Meets Eve</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <div class="d-flex">
-          <ul class="nav navbar-nav mr-auto">
-           <!-- <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-              <li><a href="#contact">Contact</a></li>
-          </ul>
-          </div>
-        </div><!--/.nav-collapse
-      </div>
-    </nav>
-   -->
+<nav class="navbar navbar-expand-md fixed-top navbar-dark" div id="navbar">
+  <a class="navbar-brand abs" th:href="index.html">AdamMeetsEve</a>
+  <ul class="navbar-nav ml-auto">
+    <form class="form-inline">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" id="loginBtn" type="submit">Search</button>
+    </form>
+    <button type="button" button id="loginBtn" class="btn btn-info btn-md">Logout</button>
+  </ul>
+</nav>
 
+
+</div>
+<div class="container">
+
+  <div class="index-body">
+    <h1>Welcome To Your User Page!</h1><br><br>
+    <p class="lead">
+      <b>Hello, firstName lastName. Select A Profile To Start Mingling.</b><br>
+    <hr size="2">
+    Available Profiles:<br>
+    <button type="btn-md" div id="button" href="profile">Create A New Profile</button>
+    <hr size="2">
+    <button type="btn-md" data-toggle="collapse" div id="button" data-target="#userinfo">Click here to see your user info.</button>
+
+    <div id="userinfo" class="collapse">
+      Placeholder<br>
+      SSN <br>
+      Email <br>
+      Password <br>
+      First Name =  Last Name = <br>
+      Address: Street City State Zipcode <br>
+      Telephone: <br>
+      Credit Card: <br>
+      User Type: <br>
+
+      <button type="btn-sm" div id="button">Change Your User Settings?</button>
+    </div><br>
+    </p>
+    <!--<button type="button" class="btn btn-dark btn-lg" div id="button" href="">Register</button>-->
   </div>
 
-    <nav class="navbar navbar-expand-md fixed-top navbar-dark" div id="navbar">
-      <a class="navbar-brand abs" href="#">AdamMeetsEve</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="navbar-collapse collapse" id="collapsingNavbar">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <button type="button" button id="loginBtn" class="btn btn-info btn-md" data-toggle="modal" data-target="#myModal">Logout</button>
-          </li>
-        </ul>
-      </div>
-    </nav>
-
-  <!-- Modal -->
-  <div id="myModal" class="modal-fade" style="z-index:9999;" role="dialog";>
-
-    <!--
-    <!-- Modal content -->
-    <div class="modal-content">
-      <span class="close">&times;</span>
-      <p>Returning Users Login.</p><br>
-      <form action="login" th:action="@{/login}" th:object="${info}" method="post">
-        <table style="width:100%">
-          <tr>
-            <th>E-mail:</th>
-            <th><input type="text" div id="textBox" title="emailentry" th:field="*{email}"/></th>
-          </tr>
-          <tr>
-            <th>Password:</th>
-            <th><input type="text" div id="textBox" title="passwordentry" th:field="*{password}"/></th>
-          </tr>
-          <tr>
-            <th><input type="submit" th:unless="${validUser.isEmpty()}"/></th>
-          </tr>
-        </table>
-      </form>
-    </div>
-    -->
-
-  </div>
-
-    <div class="container">
-
-      <div class="index-body">
-        <h1>Welcome To Adam Meets Eve.</h1><br>
-        <img
-                src = "https://media.ldscdn.org/images/media-library/gospel-art/old-testament/garden-of-eden-clawson-art-37727-print.jpg?download=true"
-                alt ="Not Found"
-                style="width:100%; border-radius: 90%;">
-        <p class="lead"><br> Your #1 dating site for Christian mingling. Click below to enter paradise.</p>
-        <button type="button" class="btn btn-dark btn-lg" div id="button" onclick="location.href='/register'">Register</button>
-
-      </div>
 
 
-    </div><!-- /.container -->
+</div><!-- /.container -->
 
 
-  <script>
-      var modal = document.getElementById('myModal');
+<script>
+    var modal = document.getElementById('myModal');
 
-      // Get the button that opens the modal
-      var btn = document.getElementById("loginBtn");
+    // Get the button that opens the modal
+    var btn = document.getElementById("loginBtn");
 
-      // Get the <span> element that closes the modal
-      var span = document.getElementsByClassName("close")[0];
+    // Get the <span> element that closes the modal
+    var span = document.getElementsByClassName("close")[0];
 
-      // When the user clicks on the button, open the modal
-      btn.onclick = function() {
-          modal.style.display = "block";
-      }
+    // When the user clicks on the button, open the modal
+    btn.onclick = function() {
+        modal.style.display = "block";
+    }
 
-      // When the user clicks on <span> (x), close the modal
-      span.onclick = function() {
-          modal.style.display = "none";
-      }
+    // When the user clicks on <span> (x), close the modal
+    span.onclick = function() {
+        modal.style.display = "none";
+    }
 
-      // When the user clicks anywhere outside of the modal, close it
-      window.onclick = function(event) {
-          if (event.target == modal) {
-              modal.style.display = "none";
-          }
-      }
-  </script>
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
-  </body>
+    // When the user clicks anywhere outside of the modal, close it
+    window.onclick = function(event) {
+        if (event.target == modal) {
+            modal.style.display = "none";
+        }
+    }
+</script>
+<!-- Bootstrap core JavaScript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+<script src="../../dist/js/bootstrap.min.js"></script>
+<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+<script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+</body>
 </html>
