--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,52 +12,41 @@
     <title>Adam Meets Eve | Welcome!</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+    <link href="/assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="index.css" rel="stylesheet">
-    <link href="AdamMeetsEve.css" rel="stylesheet">
+    <link href="/index.css" rel="stylesheet">
+    <link href="/AdamMeetsEve.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+      <script src="/https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="/https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <a th:href="user" th:if="${session.currentUser != null}"></a>
-  </head>
 
-  <!--
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="index.html">Adam Meets Eve</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <div class="d-flex">
-          <ul class="nav navbar-nav mr-auto">
-           <!-- <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-              <li><a href="#contact">Contact</a></li>
-          </ul>
-          </div>
-        </div><!--/.nav-collapse
-      </div>
-    </nav>
-   -->
+    <!-- Javascript function checks if session is loaded, then redirects to their page -->
+    <script th:inline="javascript">
+        /*<![CDATA[*/
+
+        var curuser = [[${session.currentUser}]]; //Your Thymleaf variable
+            if(curuser != null)
+            {
+                var ssn = curuser.ssn;
+                var url = "viewuser/" + ssn;
+                location.replace(url);
+            };
+
+        /*]]>*/
+    </script>
+  </head>
 
   </div>
 
     <nav class="navbar navbar-expand-md fixed-top navbar-dark" div id="navbar">
-      <a class="navbar-brand abs" th:href="index">AdamMeetsEve</a>
+      <a class="navbar-brand abs" th:href="@{/}">AdamMeetsEve</a>
       <div class="navbar-collapse collapse" id="collapsingNavbar">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
@@ -86,7 +75,6 @@
           </tr>
           <tr>
             <th><input type="submit"/></th>
-            javascript:validate();
           </tr>
         </table>
       </form>
@@ -145,10 +133,10 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
+    <script src="/https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="/../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+    <script src="/../../dist/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+    <script src="/../../assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
