Commit: PPP added to Register

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -121,6 +121,7 @@
                     <th><input type="submit"/></th>
                 </tr>
             </table>
+    </form>
         </p>
         <!--<button type="button" class="btn btn-dark btn-lg" div id="button" href="">Register</button>-->
     </div>
