--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -118,7 +118,7 @@
                     </th>
                 </tr>
                 <tr>
-                    <th><input type="submit"/></th>
+                    <th><input type="submit" div id="button"/></th>
                 </tr>
             </table>
     </form>
