--- a/src/main/resources/static/user.css
+++ b/src/main/resources/static/user.css
@@ -3,6 +3,8 @@ body {
     background: linear-gradient(to bottom, #fffff0 0%, #fffff0 30%,#000000 30%,white 30%,white 100%);
     background-attachment:fixed;
     background-repeat: no-repeat;
+    position:fixed;
+    line-height: 1.5;
 
     color: #24282a;
 }
